--- a/github/src/main/res/layout/item_receive_event.xml
+++ b/github/src/main/res/layout/item_receive_event.xml
@@ -34,7 +34,7 @@
                     android:layout_height="40dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="8dp"
-                    app:circleCrop="true"
+                    app:circleCrop="@{true}"
                     app:imageUrl="@{event.actor.avatar}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
